--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"format": "prettier --write .",
-		"lint": "eslint . --ext .js,.jsx --fix"
+		"lint": "eslint . --ext .js,.jsx --fix",
+		"compile:sass": "sass src/styles/scss/index.scss src/styles/css/index.css -w"
 	},
 	"dependencies": {
 		"react": "18.2.0",
@@ -22,6 +23,7 @@
 		"eslint-plugin-promise": "6.1.1",
 		"eslint-plugin-react": "7.31.10",
 		"prettier": "2.7.1",
+		"sass": "^1.56.2",
 		"vite": "3.2.0"
 	}
 }
