--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
 		"preview": "vite preview",
 		"format": "prettier --write .",
 		"lint": "eslint . --ext .js,.jsx --fix",
-		"compile:sass": "sass src/styles/scss/index.scss src/styles/css/index.css -w"
+		"compile:sass": "sass src/styles/scss/index.scss src/styles/css/index.css -w",
+		"server": "json-server ./data.json -p 4000"
 	},
 	"dependencies": {
 		"install": "^0.13.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-icons": "^4.7.1",
-		"uuid": "^9.0.0"
+		"react-icons": "4.7.1",
+		"uuid": "9.0.0"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-react": "2.2.0",
@@ -25,8 +26,9 @@
 		"eslint-plugin-n": "15.3.0",
 		"eslint-plugin-promise": "6.1.1",
 		"eslint-plugin-react": "7.31.10",
+		"json-server": "0.17.1",
 		"prettier": "2.7.1",
-		"sass": "^1.56.2",
+		"sass": "1.56.2",
 		"vite": "3.2.0"
 	}
 }
